# Spotify-Hit-Predictor-Trend-Analyzer-Pipeline

./: .cache  .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SPOTIFY_API_ANALYSIS.md  docker-compose.yaml  main.py  ouput.json  pyproject.toml  requirements.txt  spotify_cookies.json  test_selenium.py
chrome_profile/: DevToolsActivePort  Local State  first_party_sets.db
chrome_profile/Default/: Preferences
chrome_profile/GrShaderCache/: data_1  index
chrome_profile/GraphiteDawnCache/: data_1  index
chrome_profile/ShaderCache/: data_1  index
chrome_profile/SpotifyCharts/: .com.google.Chrome.Ba1qiK  .com.google.Chrome.ZDr8KD  BrowsingTopicsState  Cookies  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
chrome_profile/segmentation_platform/: ukm_db
dags/: spotify_cookies.json  spotify_extract_artists.py  spotify_extract_tracks.py  test.py
dags/DAG/: script_dags.py
dags/scripts/: crawl_audio_feature.py  crawl_top_track.py  crawl_track_selnium.py  extract.py  extract_artists.py  extract_tracks.py
data/artist/: artist_2026-05-21.json  artist_2026-05-21.jsonl
data/audio_feature/: feature-2026-05-21.json  feature_2026-05-21.json
data/output_data/: top_track_2026_05_27_enriched.json
data/top_track/: get_track.py  regional-vn-weekly-2026-05-28.csv  top_track_2026_05_27.json
data/track_info/: track_info-2026-05-21.json  track_info-2026-05-28.json
docs/: spotify_search_batch_guide.ipynb
(+1095 files in other folders)
