[project]
name = "spotify-hit-predictor-trend-analyzer-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.14",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "lxml>=6.1.1",
    "pendulum>=3.2.0",
    "requests>=2.34.2",
]
